--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -38,7 +38,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executres code in a script</li>
+          <li>A JavaScript file is read top to bottom</li>
+          <li>JavaScript has a built in math object to generate random numbers</li>
         </ul>
       </section>
     </main>
